--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical" android:layout_width="fill_parent"
   android:layout_height="fill_parent" android:id="@+id/layout">
   <!-- <1> -->
-  <TextView android:layout_width="fill_parent"
-    android:layout_height="wrap_content" android:text="@string/app_name"
-    android:textSize="24sp" />
+  
   <!-- <2> -->
-  <FrameLayout android:id="@+id/preview"
-    android:layout_weight="1" android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-  </FrameLayout>
   <!-- <3> -->
-  <Button android:layout_width="wrap_content"
-    android:layout_height="wrap_content" android:id="@+id/buttonClick"
-    android:text="Click" android:layout_gravity="center" />
-</LinearLayout>
+
+  <FrameLayout
+      android:id="@+id/preview"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:layout_alignParentLeft="true"
+      android:layout_alignParentTop="true"
+      android:layout_weight="1" >
+
+  </FrameLayout>
+
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/app_name"
+      android:textSize="24sp" />
+
+  <Button
+      android:id="@+id/buttonClick"
+      android:layout_width="wrap_content"
+      android:layout_height="50dp"
+      android:layout_alignParentBottom="true"
+      android:layout_centerHorizontal="true"
+      android:text="Click" />
+
+</RelativeLayout>
